src/main/antlr/WaccParser.java
// Generated from ./WaccParser.g4 by ANTLR 4.9.1
package antlr;

  import frontend.errorlistener.SyntaxErrorListener;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WaccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		END=1, BEGIN=2, IS=3, COMMA=4, FULL_STOP=5, ASSIGN=6, CLASS=7, NEW=8, 
		SKIP_LITER=9, READ=10, FREE=11, RETURN=12, EXIT=13, PRINT=14, PRINTLN=15, 
		IF=16, THEN=17, ELSE=18, FI=19, WHILE=20, DO=21, DONE=22, SEMI_COLON=23, 
		NEWPAIR=24, CALL=25, OPEN_SQUARE_BRACKETS=26, CLOSE_SQUARE_BRACKETS=27, 
		PAIR=28, FST=29, SND=30, FOR=31, IN=32, UNTIL=33, VAR=34, INT=35, BOOL=36, 
		CHAR=37, STRING=38, PLUS=39, MINUS=40, MULT=41, DIV=42, MOD=43, GT=44, 
		GTE=45, LT=46, LTE=47, EQ=48, NE=49, AND=50, OR=51, BIT_AND=52, BIT_OR=53, 
		NOT=54, LEN=55, ORD=56, CHR=57, BIT_NOT=58, OPEN_PARENTHESES=59, CLOSE_PARENTHESES=60, 
		TRUE=61, FALSE=62, NULL=63, VISIBILITY=64, INTEGER=65, BINARY_INTEGER=66, 
		OCTAL_INTEGER=67, HEXADECIMAL_INTEGER=68, WS=69, IDENT=70, CHAR_LITER=71, 
		STR_LITER=72, COMMENT=73;
	public static final int
		RULE_program = 0, RULE_classes = 1, RULE_attribute = 2, RULE_attributeList = 3, 
		RULE_classFunc = 4, RULE_classInstant = 5, RULE_callClassFunc = 6, RULE_classAttr = 7, 
		RULE_func = 8, RULE_paramList = 9, RULE_param = 10, RULE_stat = 11, RULE_assignLHS = 12, 
		RULE_assignRHS = 13, RULE_argList = 14, RULE_pairElem = 15, RULE_type = 16, 
		RULE_baseType = 17, RULE_arrayType = 18, RULE_pairType = 19, RULE_pairElemType = 20, 
		RULE_expr = 21, RULE_unaryOper = 22, RULE_arithmeticOper1 = 23, RULE_arithmeticOper2 = 24, 
		RULE_binaryOper1 = 25, RULE_binaryOper2 = 26, RULE_arrayElem = 27, RULE_arrayLiter = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classes", "attribute", "attributeList", "classFunc", "classInstant", 
			"callClassFunc", "classAttr", "func", "paramList", "param", "stat", "assignLHS", 
			"assignRHS", "argList", "pairElem", "type", "baseType", "arrayType", 
			"pairType", "pairElemType", "expr", "unaryOper", "arithmeticOper1", "arithmeticOper2", 
			"binaryOper1", "binaryOper2", "arrayElem", "arrayLiter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'end'", "'begin'", "'is'", "','", "'.'", "'='", "'class'", "'new'", 
			"'skip'", "'read'", "'free'", "'return'", "'exit'", "'print'", "'println'", 
			"'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'done'", "';'", 
			"'newpair'", "'call'", "'['", "']'", "'pair'", "'fst'", "'snd'", "'for'", 
			"'in'", "'until'", "'var'", "'int'", "'bool'", "'char'", "'string'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", "'=='", 
			"'!='", "'&&'", "'||'", "'&'", "'|'", "'!'", "'len'", "'ord'", "'chr'", 
			"'~'", "'('", "')'", "'true'", "'false'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "END", "BEGIN", "IS", "COMMA", "FULL_STOP", "ASSIGN", "CLASS", 
			"NEW", "SKIP_LITER", "READ", "FREE", "RETURN", "EXIT", "PRINT", "PRINTLN", 
			"IF", "THEN", "ELSE", "FI", "WHILE", "DO", "DONE", "SEMI_COLON", "NEWPAIR", 
			"CALL", "OPEN_SQUARE_BRACKETS", "CLOSE_SQUARE_BRACKETS", "PAIR", "FST", 
			"SND", "FOR", "IN", "UNTIL", "VAR", "INT", "BOOL", "CHAR", "STRING", 
			"PLUS", "MINUS", "MULT", "DIV", "MOD", "GT", "GTE", "LT", "LTE", "EQ", 
			"NE", "AND", "OR", "BIT_AND", "BIT_OR", "NOT", "LEN", "ORD", "CHR", "BIT_NOT", 
			"OPEN_PARENTHESES", "CLOSE_PARENTHESES", "TRUE", "FALSE", "NULL", "VISIBILITY", 
			"INTEGER", "BINARY_INTEGER", "OCTAL_INTEGER", "HEXADECIMAL_INTEGER", 
			"WS", "IDENT", "CHAR_LITER", "STR_LITER", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WaccParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  SyntaxErrorListener syntaxErr;

	  public WaccParser(TokenStream input, SyntaxErrorListener syntaxErr) {
	    this(input);
	    this.syntaxErr = syntaxErr;
	  }

	  public void checkOverflowError(boolean isMinus, long val) {
	    if (isMinus && -val < Integer.MIN_VALUE) {
	      syntaxErr.intError(this._ctx.start.getLine(), false);
	    } else if (!isMinus && val > Integer.MAX_VALUE) {
	      syntaxErr.intError(this._ctx.start.getLine(), true);
	    }
	  }

	public WaccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(WaccParser.BEGIN, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public TerminalNode EOF() { return getToken(WaccParser.EOF, 0); }
		public List<ClassesContext> classes() {
			return getRuleContexts(ClassesContext.class);
		}
		public ClassesContext classes(int i) {
			return getRuleContext(ClassesContext.class,i);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(BEGIN);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(59);
				classes();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					func();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(71);
			stat(0);
			setState(72);
			match(END);
			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassesContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(WaccParser.CLASS, 0); }
		public TerminalNode IDENT() { return getToken(WaccParser.IDENT, 0); }
		public TerminalNode IS() { return getToken(WaccParser.IS, 0); }
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public AttributeListContext attributeList() {
			return getRuleContext(AttributeListContext.class,0);
		}
		public List<ClassFuncContext> classFunc() {
			return getRuleContexts(ClassFuncContext.class);
		}
		public ClassFuncContext classFunc(int i) {
			return getRuleContext(ClassFuncContext.class,i);
		}
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitClasses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(CLASS);
			setState(76);
			match(IDENT);
			setState(77);
			match(IS);
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(78);
				attributeList();
				}
				break;
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VISIBILITY) {
				{
				{
				setState(81);
				classFunc();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode VISIBILITY() { return getToken(WaccParser.VISIBILITY, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(WaccParser.IDENT, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(VISIBILITY);
			setState(90);
			type();
			setState(91);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeListContext extends ParserRuleContext {
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<TerminalNode> SEMI_COLON() { return getTokens(WaccParser.SEMI_COLON); }
		public TerminalNode SEMI_COLON(int i) {
			return getToken(WaccParser.SEMI_COLON, i);
		}
		public AttributeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitAttributeList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeListContext attributeList() throws RecognitionException {
		AttributeListContext _localctx = new AttributeListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attributeList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			attribute();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI_COLON) {
				{
				{
				setState(94);
				match(SEMI_COLON);
				setState(95);
				attribute();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassFuncContext extends ParserRuleContext {
		public TerminalNode VISIBILITY() { return getToken(WaccParser.VISIBILITY, 0); }
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public ClassFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitClassFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassFuncContext classFunc() throws RecognitionException {
		ClassFuncContext _localctx = new ClassFuncContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classFunc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(VISIBILITY);
			setState(102);
			func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassInstantContext extends ParserRuleContext {
		public TerminalNode NEW() { return getToken(WaccParser.NEW, 0); }
		public TerminalNode IDENT() { return getToken(WaccParser.IDENT, 0); }
		public TerminalNode OPEN_PARENTHESES() { return getToken(WaccParser.OPEN_PARENTHESES, 0); }
		public TerminalNode CLOSE_PARENTHESES() { return getToken(WaccParser.CLOSE_PARENTHESES, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public ClassInstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classInstant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitClassInstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassInstantContext classInstant() throws RecognitionException {
		ClassInstantContext _localctx = new ClassInstantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classInstant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(NEW);
			setState(105);
			match(IDENT);
			setState(106);
			match(OPEN_PARENTHESES);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 39)) & ~0x3f) == 0 && ((1L << (_la - 39)) & ((1L << (PLUS - 39)) | (1L << (MINUS - 39)) | (1L << (NOT - 39)) | (1L << (LEN - 39)) | (1L << (ORD - 39)) | (1L << (CHR - 39)) | (1L << (BIT_NOT - 39)) | (1L << (OPEN_PARENTHESES - 39)) | (1L << (TRUE - 39)) | (1L << (FALSE - 39)) | (1L << (NULL - 39)) | (1L << (INTEGER - 39)) | (1L << (BINARY_INTEGER - 39)) | (1L << (OCTAL_INTEGER - 39)) | (1L << (HEXADECIMAL_INTEGER - 39)) | (1L << (IDENT - 39)) | (1L << (CHAR_LITER - 39)) | (1L << (STR_LITER - 39)))) != 0)) {
				{
				setState(107);
				argList();
				}
			}

			setState(110);
			match(CLOSE_PARENTHESES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallClassFuncContext extends ParserRuleContext {
		public TerminalNode CALL() { return getToken(WaccParser.CALL, 0); }
		public List<TerminalNode> IDENT() { return getTokens(WaccParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(WaccParser.IDENT, i);
		}
		public TerminalNode FULL_STOP() { return getToken(WaccParser.FULL_STOP, 0); }
		public TerminalNode OPEN_PARENTHESES() { return getToken(WaccParser.OPEN_PARENTHESES, 0); }
		public TerminalNode CLOSE_PARENTHESES() { return getToken(WaccParser.CLOSE_PARENTHESES, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public CallClassFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callClassFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitCallClassFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallClassFuncContext callClassFunc() throws RecognitionException {
		CallClassFuncContext _localctx = new CallClassFuncContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_callClassFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(CALL);
			setState(113);
			match(IDENT);
			setState(114);
			match(FULL_STOP);
			setState(115);
			match(IDENT);
			setState(116);
			match(OPEN_PARENTHESES);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 39)) & ~0x3f) == 0 && ((1L << (_la - 39)) & ((1L << (PLUS - 39)) | (1L << (MINUS - 39)) | (1L << (NOT - 39)) | (1L << (LEN - 39)) | (1L << (ORD - 39)) | (1L << (CHR - 39)) | (1L << (BIT_NOT - 39)) | (1L << (OPEN_PARENTHESES - 39)) | (1L << (TRUE - 39)) | (1L << (FALSE - 39)) | (1L << (NULL - 39)) | (1L << (INTEGER - 39)) | (1L << (BINARY_INTEGER - 39)) | (1L << (OCTAL_INTEGER - 39)) | (1L << (HEXADECIMAL_INTEGER - 39)) | (1L << (IDENT - 39)) | (1L << (CHAR_LITER - 39)) | (1L << (STR_LITER - 39)))) != 0)) {
				{
				setState(117);
				argList();
				}
			}

			setState(120);
			match(CLOSE_PARENTHESES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassAttrContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(WaccParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(WaccParser.IDENT, i);
		}
		public TerminalNode FULL_STOP() { return getToken(WaccParser.FULL_STOP, 0); }
		public ClassAttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classAttr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitClassAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassAttrContext classAttr() throws RecognitionException {
		ClassAttrContext _localctx = new ClassAttrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classAttr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(IDENT);
			setState(123);
			match(FULL_STOP);
			setState(124);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(WaccParser.IDENT, 0); }
		public TerminalNode OPEN_PARENTHESES() { return getToken(WaccParser.OPEN_PARENTHESES, 0); }
		public TerminalNode CLOSE_PARENTHESES() { return getToken(WaccParser.CLOSE_PARENTHESES, 0); }
		public TerminalNode IS() { return getToken(WaccParser.IS, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			type();
			setState(127);
			match(IDENT);
			setState(128);
			match(OPEN_PARENTHESES);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAIR) | (1L << INT) | (1L << BOOL) | (1L << CHAR) | (1L << STRING))) != 0)) {
				{
				setState(129);
				paramList();
				}
			}

			setState(132);
			match(CLOSE_PARENTHESES);
			setState(133);
			match(IS);
			setState(134);
			stat(0);
			setState(135);
			match(END);
			syntaxErr.returnCheck(this._ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(WaccParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WaccParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			param();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(139);
				match(COMMA);
				setState(140);
				param();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(WaccParser.IDENT, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			type();
			setState(147);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
